<resources>
    <string name="app_name">Drinks &amp; Dragons</string>
    <string name="image_content_description">image</string>
    <string name="fight">Fight</string>
    <string name="run">Run</string>
    <string name="charm">Charm</string>
    <string name="bad_stuff">Bad Stuff</string>
    <string name="drinks">Drinks</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="dragons">Dragons</string>
    <string name="new_game">New Game</string>
    <string name="how_to_play">How to Play</string>
    <string name="draw_event_card">Draw event card</string>
    <string name="inventory">Inventory</string>
    <string name="runaway_success">You manage to get away safely by the skin of your teeth.</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="level_counter_des">"Status points : "</string>
    <string name="view">Inspect</string>
    <string name="separator">" : "</string>
    <string name="victory_top">Congratulations, you are now a…</string>
    <string name="victory_bottom">Total Legend</string>
    <string name="treasure_acquired">"Acquired : "</string>
    <string name="common">Common</string>
    <string name="rare">Rare</string>
    <string name="epic">Epic</string>
    <string name="run_forfeit">Drink 1 you coward</string>
    <string name="cont">Continue</string>
    <string name="adventurers">No. of Adventurers</string>
    <string name="player1">Input Player 1</string>
    <string name="confirm">Confirm</string>
    <string name="player2">Input Player 2</string>
    <string name="player3">Input Player 3</string>
    <string name="player4">Input Player 4</string>
    <string name="player5">Input Player 5</string>
    <string name="player6">Input Player 6</string>
    <string name="dialog_names_title">Adventurer Names</string>
    <string name="end_turn">End Turn</string>
    <string name="skip_turn">Skip Turn</string>
    <string name="dialog_quit_title">Are you sure you want to quit?</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="tutorial1">The aim of the game is to get 6 status points and become a total legend, select up to six players to play on one phone. You must decide what the forfeit for the losers is.</string>
    <string name="tutorial2">Kill monsters and complete event cards on your journey and gain status points.</string>
    <string name="tutorial3">Gain awesome loot and treasure from your conquests and equip them in the inventory screen to increase your chances of victory.</string>
    <string name="tutorial4">Drink responsibly and safely, know when enough is enough, sometimes all warriors must yield.</string>
    <string name="dialog_outcome_title">Outcome</string>
</resources>
