<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:padding="@dimen/card_padding"
    android:background="@drawable/background_shape_event">

    <TextView
        android:id="@+id/tv_dialog_player_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/description_padding"
        android:gravity="center"
        android:text="@string/dialog_names_title"
        android:textSize="@dimen/largest_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_player_name_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/player1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_player_names"
        app:layout_constraintBottom_toTopOf="@id/et_player_name_two"/>

    <EditText
        android:id="@+id/et_player_name_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/player2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_name_one"
        app:layout_constraintBottom_toTopOf="@id/et_player_name_three"/>

    <EditText
        android:id="@+id/et_player_name_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/player3"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_name_two"
        app:layout_constraintBottom_toTopOf="@id/et_player_name_four"/>

    <EditText
        android:id="@+id/et_player_name_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/player4"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_name_three"
        app:layout_constraintBottom_toTopOf="@id/et_player_name_five"/>

    <EditText
        android:id="@+id/et_player_name_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/player5"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_name_four"
        app:layout_constraintBottom_toTopOf="@id/et_player_name_six"/>

    <EditText
        android:id="@+id/et_player_name_six"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/player6"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_name_five"
        app:layout_constraintBottom_toTopOf="@id/btn_names_confirm"/>

    <Button
        android:id="@+id/btn_names_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="@dimen/standard_text_size"
        android:textColor="@android:color/white"
        android:background="@drawable/background_shape_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>