<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.SplashActivity">
    
    <ImageView
        android:id="@+id/iv_splash_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/image_content_description"
        android:layout_marginBottom="@dimen/splash_icon_marginBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="invisible"
        />

    <TextView
        android:id="@+id/tv_splash_title_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drinks"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/splash_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/tv_splash_title_and"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/splash_title_text_size"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_title_drinks"
        tools:visibility="gone"/>
    
    <TextView
        android:id="@+id/tv_splash_title_dragons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dragons"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/splash_title_text_size"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_title_and" 
        tools:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_adventurer_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/menu_image_rb"
        android:contentDescription="@string/image_content_description"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_splash_menu_btns"
        app:layout_constraintVertical_bias="0.2"
        tools:visibility="visible"/>

    <LinearLayout
        android:id="@+id/ll_splash_menu_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/menu_btns_marginTop"
        android:gravity="center"
        android:visibility="gone"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/iv_adventurer_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/menu_btn_marginVertical"
            android:layout_marginHorizontal="@dimen/menu_btn_marginHorizontal"
            android:text="@string/new_game"
            android:textSize="@dimen/standard_text_size"
            android:textColor="@android:color/white"
            android:background="@drawable/background_shape_button"/>

        <org.angmarch.views.NiceSpinner
            android:id="@+id/spinner_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/menu_btn_marginVertical"
            android:layout_marginHorizontal="@dimen/menu_btn_marginHorizontal"/>

        <Button
            android:id="@+id/btn_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/menu_btn_marginVertical"
            android:layout_marginHorizontal="@dimen/menu_btn_marginHorizontal"
            android:text="@string/how_to_play"
            android:textSize="@dimen/standard_text_size"
            android:textColor="@android:color/white"
            android:background="@drawable/background_shape_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>