<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/card_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_shape_event"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/tv_dialog_equipment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/description_padding"
        android:gravity="center"
        android:textSize="@dimen/largest_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/iv_dialog_equipment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Treasure"/>
    <ImageView
        android:id="@+id/iv_dialog_equipment"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:src="@drawable/e_treasure_chest"/>
    <TextView
        android:id="@+id/tv_dialog_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@id/iv_dialog_equipment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/common"/>

    <LinearLayout
        android:id="@+id/ll_dialog_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small_margin"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/stats_text_size"
                android:textColor="@android:color/black"
                android:text="@string/fight"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/stats_text_size"
                android:textColor="@android:color/black"
                android:text="@string/separator"/>
            <TextView
                android:id="@+id/tv_dialog_fight_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/stats_text_size"
                android:textColor="@android:color/black"
                tools:text="30"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small_margin"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/stats_text_size"
                android:textColor="@android:color/black"
                android:text="@string/charm"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/stats_text_size"
                android:textColor="@android:color/black"
                android:text="@string/separator"/>
            <TextView
                android:id="@+id/tv_dialog_charm_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/stats_text_size"
                android:textColor="@android:color/black"
                tools:text="30"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_padding"
        android:paddingBottom="@dimen/card_padding"
        android:paddingHorizontal="@dimen/description_padding"
        android:gravity="center"
        android:textSize="@dimen/large_text_size"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/ll_dialog_stats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="description"/>

</androidx.constraintlayout.widget.ConstraintLayout>